# learning

./: .gitignore  README.md
MyFirstSketch/: MyFirstSketch.ino
asyncpy/: main.py  pyproject.toml
asyncpy/src/myasyncpy/: EventLoop.py  Task.py  __init__.py  common.py  linkedlist.py
asyncpy/tests/: test_main.py
bixidata/: .gitignore  cachedDirections.pkl  data_exploration.ipynb  datamapping.ipynb  main.py  pyproject.toml
bixidata/.ipynb_checkpoints/: data_exploration-checkpoint.ipynb  directions_result-checkpoint.json  main-checkpoint.py
boxer_trainer/boxer_communicator/: boxer_communicator.ino
hello-rust/src/: main.rs
pinocchio/: main.py  pyproject.toml
python-pvm/: main.py  pyproject.toml
raytracing/: .gitignore
readme-hacker/: main.py  pyproject.toml  spam-fetch.sh
robotViewer/: index.html  package.json  tsconfig.app.json
robotViewer/src/: App.css  App.tsx  index.css
test-generator/: main.py  pyproject.toml  test_myrange.py
test-pyvista-basedpyright/: main.py  pyproject.toml
test-pyvista-tk-widget/: main.py  pyproject.toml
test-pyvista-trame/: main.py  pyproject.toml
test-vtk/: main.py  pyproject.toml
test-wraps/: main.py  pyproject.toml
webgpu/: README.md  app.ts  index.html  package.json  tsconfig.json
