[project]
name = "bixidata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "googlemaps>=4.10.0",
    "jupyter>=1.1.1",
    "lab>=8.9",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.260113",
    "python-dotenv>=1.2.2",
]
