[project]
name = "test-pyvista-trame"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyvista[all]>=0.48.4",
    "pywebview>=6.2.1",
    "trame>=3.13.2",
    "trame-pyvista>=0.1.1",
    "trame-vtk>=2.11.8",
    "trame-vuetify>=3.2.2",
]
